--- a/tabs.html
+++ b/tabs.html
@@ -2,6 +2,9 @@
 <head>
     <script src="Scripts/angular.js"></script>
     <script src="tabs.js"></script>
+    <script src="tabsLocal.js" ></script>
+    <script src="tabsEvents.js" ></script>
+    <script src="tabsDragHandlers.js" ></script>
     <script src="Scripts/ext.js"></script>
     <script src="Scripts/linq.js"></script>
     <script src="Scripts/LINQ_JS.js"></script>
